# heipy

./: .gitignore  README.md  install_heideltime_standalone.sh  pyproject.toml
heipy/: heideltime.py
heipy/libs/treetagger/: download.sh
libs/: config.props
typings/de/: __init__.pyi
typings/de/unihd/: __init__.pyi
typings/de/unihd/dbs/: __init__.pyi
typings/de/unihd/dbs/heideltime/: __init__.pyi
typings/de/unihd/dbs/heideltime/standalone/: __init__.pyi
typings/de/unihd/dbs/heideltime/standalone/components/: __init__.pyi
typings/de/unihd/dbs/heideltime/standalone/exceptions/: __init__.pyi
typings/de/unihd/dbs/uima/: __init__.pyi
typings/de/unihd/dbs/uima/annotator/: __init__.pyi
typings/de/unihd/dbs/uima/annotator/alllanguagestokenizer/: __init__.pyi
typings/de/unihd/dbs/uima/annotator/heideltime/: __init__.pyi
typings/de/unihd/dbs/uima/annotator/intervaltagger/: __init__.pyi
typings/de/unihd/dbs/uima/annotator/jvntextprowrapper/: __init__.pyi
typings/de/unihd/dbs/uima/annotator/stanfordtagger/: __init__.pyi
typings/de/unihd/dbs/uima/annotator/treetagger/: __init__.pyi
typings/de/unihd/dbs/uima/consumer/: __init__.pyi
typings/de/unihd/dbs/uima/consumer/aceternwriter/: __init__.pyi
typings/de/unihd/dbs/uima/consumer/eventi2014writer/: __init__.pyi
typings/de/unihd/dbs/uima/consumer/tempeval2writer/: __init__.pyi
typings/de/unihd/dbs/uima/consumer/tempeval3writer/: __init__.pyi
typings/de/unihd/dbs/uima/reader/: __init__.pyi
typings/de/unihd/dbs/uima/types/: __init__.pyi
typings/de/unihd/dbs/uima/types/heideltime/: __init__.pyi
(+8 files in other folders)
